# netls

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  display.rs  dns.rs  docker.rs  lib.rs  main.rs  runtime.rs  services.rs  tui.rs  tui_common.rs  watch.rs
src/output/: csv.rs  grouped.rs  json.rs  mod.rs  summary.rs  table.rs
src/platform/: linux.rs  macos.rs  macos_enrich.rs  mod.rs
tests/: live_snapshot.rs
