[package]
name = "netls"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
description = "Network connections viewer for daily use and automation - container visibility, JSON/CSV output, process tree, live watch mode"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NEOFIT-dev/netls"
homepage = "https://github.com/NEOFIT-dev/netls"
readme = "README.md"
keywords = ["network", "netstat", "sockets", "cli", "monitoring"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["/assets", "/.github", "/.gitignore"]

[lib]
name = "netls"
path = "src/lib.rs"

[[bin]]
name = "netls"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Output
tabled = { version = "0.16", features = ["ansi"] }
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# TUI / watch
ratatui = "0.29"
crossterm = "0.28"

# Error handling
thiserror = "2"
anyhow = "1"

# Config file
figment = { version = "0.10", features = ["toml"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
